--- a/src/card/bhh/event.tex
+++ b/src/card/bhh/event.tex
@@ -1,77 +1,63 @@
 %!TEX root = ../../../card.tex
 
-\begin{EventCard}{A Moment of Hope}{希望時刻}
-
+\begin{EventCard}{bhh}{A Moment of Hope}{希望時刻}
   \begin{CardStory}
     房間湧現出不可思議的正面能量，\\
     似乎有什麼正努力對抗著\\
     這屋子裡的邪惡勢力。
   \end{CardStory}
-
-  放置一枚\TokenSq{Blessing}在此房。\\[.5em]
-  此後，在此房內進行的任何\Roll{Trait}，皆多擲１顆骰（至多８顆）。\\[.5em]
-
+  放置一枚\TokenSq{Blessing}在此房。\smallskip
+  此後，任何英雄在此房內進行的\Roll{Trait}，皆多擲１顆骰（至多８顆）。\smallskip
 \end{EventCard}%
-%
-\begin{EventCard}{Angry Being}{惱人的生物}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Angry Being}{惱人的生物}
   \begin{CardStory}
     牠從牆上的黏液中冒出。\\
     而且⋯就在你身邊⋯
   \end{CardStory}
-
   請立即進行速度檢定：
   \begin{itemize}
     \item[5+] 你將他們遠遠甩開！獲得１級速度。
     \item[2-4] 受到１顆骰的精神傷害。
     \item[0-1] 受到１顆骰的精神傷害，和１顆骰的物理傷害。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{Bloody Vision}{血腥幻象}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Bloody Vision}{血腥幻象}
   \begin{CardStory}
     牆壁因血液而潮濕，\\
     鮮血從天花板不停滴下，\\
     流過牆壁、傢俱，直到你的鞋子⋯\\
     轉眼之間，又全都消失⋯
   \end{CardStory}
-
   請立即進行神志檢定：
   \begin{itemize}
     \item[4+] 你撐過去了！獲得１級神志。
     \item[2-3] 失去１級神志。
     \item[0-1] 你神志不清，突然攻擊１名跟你同房或相鄰房間的探險者或怪物（力量最低者）。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{Burning Man}{燃燒之人}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Burning Man}{燃燒之人}
   \begin{CardStory}
     全身著火的男子從房間跑過，\\
     濃膩的水泡在皮膚上冒出並破裂，\\
     最後只剩下炙熱的頭骨，\\
     頭顱撞擊至地面後，持續滾動⋯
   \end{CardStory}
-
   請立即進行神志檢定：
   \begin{itemize}
     \item[4+] 除了衣領下有些悶熱外，一切安好。獲得１級神志。
     \item[2-3] 快走，快走！你必須趕快離開！移至\Room{Entrance Hall}。
     \item[0-1] 你被烈焰所牽制，火花在你身上爆開。當你逃開時，受到１顆骰的物理傷害。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{Closet Door}{壁櫥}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Closet Door}{壁櫥}
   \begin{CardStory}
     壁櫥的門半掩著，\\
     裡面肯定有什麼東西躲藏著⋯
   \end{CardStory}
-
   放置一枚\TokenSq{Closet}在此房。\\[0.5em]
   每回合一次，任何探險者皆可擲２顆骰子嘗試打開壁櫥：
   \begin{itemize}
@@ -79,46 +65,37 @@
     \item[2-3] 抽取１張事件卡。
     \item[0-1] 抽取１張事件卡，並移除標記。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{Creepy Crawlies}{恐怖爬蟲}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Creepy Crawlies}{恐怖爬蟲}
   \begin{CardStory}
     成千上萬的爬蟲，\\
     落在你的皮膚上，\\
     鑽進衣服、頭髮之中⋯
   \end{CardStory}
-
   請立即進行神志檢定：
   \begin{itemize}
     \item[5+] 一眨眼，牠們全都消失了。獲得１級神志。
     \item[1-4] 失去１級神志。
     \item[0] 失去２級神志。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{Creepy Puppet}{陰森傀儡}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Creepy Puppet}{陰森傀儡}
   \begin{CardStory}
     散亂的雜物中，\\
     你發現一個令你毛骨悚然的傀儡。\\
     在你們四目相接時，\\
     他突然拿起小小的矛向你跳去⋯
   \end{CardStory}
-
   你的右方的玩家代替傀儡，對你的進行力量４的攻擊。\\[0.5em]
   若你因此受傷，除你以外擁有\Omen{Spear}的玩家，獲得２級力量。\\[0.5em]
-
 \end{EventCard}%
-%
-\begin{EventCard}{Debris}{瓦礫}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Debris}{瓦礫}
   \begin{CardStory}
     泥灰從天花板及牆上不斷掉落⋯
   \end{CardStory}
-
   請立即進行速度檢定：
   \begin{itemize}
     \item[3+] 你閃過了泥灰！獲得１級速度。
@@ -128,11 +105,9 @@
   若被活埋，保留此卡，並無法再進行任何行動或使用物品，直到掙脫為止。\\[0.5em]
   此後每回合一次，你皆可進行力量檢定達 4+ 嘗試掙脫。其他探險者也能用此方法幫你掙脫。\\[0.5em]
   若檢定三次失敗，你自動掙脫並丟棄此卡，從下回合開始正常行動。\\[0.5em]
-
 \end{EventCard}%
-%
-\begin{EventCard}{Disquieting Sounds}{令人不安的聲響}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Disquieting Sounds}{令人不安的聲響}
   \begin{CardStory}
     嬰兒的哭泣聲殷殷響起，\\
     控訴著被遺棄的命運。\\
@@ -140,35 +115,28 @@
     以及刺耳的玻璃碎裂聲⋯\\
     接著，一切恢復寂靜⋯
   \end{CardStory}
-
   擲６顆骰子：
   \begin{itemize}
     \item 若結果大於或等於已被翻出的預兆卡數量，獲得１級神志。
     \item 反之，失去１級神志。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{Drip... Drip... Drip...}{滴…滴…滴…}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Drip... Drip... Drip...}{滴…滴…滴…}
   \begin{CardStory}
     一段有節奏的聲音刺激你的腦袋⋯
   \end{CardStory}
-
   放置一枚\TokenSq{Drip}在此房。\\[0.5em]
   此後，在此房間進行的任何\Roll{Trait}，皆少擲１顆骰子（至少１顆）。\\[0.5em]
-
 \end{EventCard}%
-%
-\begin{EventCard}{Footsteps}{腳印}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Footsteps}{腳印}
   \begin{CardStory}
     地板沉緩地發出嘎軋的聲響，\\
     塵土向上飛揚，骯髒的地板上\\
     浮現了一步步的腳印。\\
     而就在它們快碰到你時，卻消失了⋯
   \end{CardStory}
-
   請立即擲１顆骰（如果你位於\Room{Crypt}，多擲１顆）：
   \begin{itemize}
     \item[4] 你和離你最近的探險者皆獲得１級力量。
@@ -177,16 +145,13 @@
     \item[1] 你失去１級速度。
     \item[0] 所有探險者皆失去１級任意屬性。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{Funeral}{葬儀}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Funeral}{葬儀}
   \begin{CardStory}
     你看見一口打開的棺材，\\
     而你正躺在裡面⋯
   \end{CardStory}
-
   請立即進行神志檢定：
   \begin{itemize}
     \item[4+] 一眨眼，全都消失了。獲得１級神志。
@@ -194,45 +159,37 @@
     \item[0-1] 你真的躺在棺材裡！為了把自己從棺材裡挖出來，你失去１級力量和１級神志。\\
                若\Room{Crypt}或\Room{Graveyard}已被探索，移至其中之一。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{Grave Dirt}{墳土飛揚}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Grave Dirt}{墳土飛揚}
   \begin{CardStory}
     這房間覆蓋著一層厚厚的墳土，\\
     塵土飄至皮膚，\\
     你吸入肺中而咳嗽⋯
   \end{CardStory}
-
   請立即進行力量檢定：
   \begin{itemize}
     \item[4+] 你將塵土拍落。獲得１級力量。
     \item[0-3] 事情不太對勁！保留此卡。每當你的回合開始時，受到１顆骰的物理傷害。
   \end{itemize}
   若你回合結束時，停留在\Room{Balcony}、\Room{Gardens}、\Room{Graveyard}、\Room{Gymnasium}、\Room{Larder}、\Room{Patio}、\Room{Tower}，或是因道具卡而讓任一屬性升級時，丟棄此卡並回復正常。\\[0.5em]
-
 \end{EventCard}%
-%
-\begin{EventCard}{Groundskeeper}{園丁}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Groundskeeper}{園丁}
   \begin{CardStory}
     你轉身看見一名穿園丁服的男人，\\
     他舉起鏟子，朝你衝來。\\
     而就在鏟子快擊中你時，\\
     卻消失了，只留下滿地的泥濘⋯
   \end{CardStory}
-
   請立即進行知識檢定（如果你位於\Room{Gardens}，少擲２顆）：
   \begin{itemize}
     \item[4+] 你在泥濘中發現了某樣東西。抽取１張道具卡。
     \item[0-3] 園丁再次出現，並用鏟子用力揮向你的臉！你的右方的玩家代替園丁，對你的進行力量４的攻擊。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{Hanged Men}{上吊之人}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Hanged Men}{上吊之人}
   \begin{CardStory}
     一陣寒風吹過房間，三名男人\\
     被破爛麻繩吊掛在天花板上。\\
@@ -241,34 +198,28 @@
     接著逐漸化為塵土，\\
     令你感到窒息⋯
   \end{CardStory}
-
   請立即對所有屬性進行檢定：
   \begin{itemize}
     \item[2+] 該屬性不受影響。
     \item[0-3] 失去１級該屬性。
   \end{itemize}
   若所有屬性皆通過檢定，獲得１級任意屬性。\\[0.5em]
-
 \end{EventCard}%
-%
-\begin{EventCard}{Hideous Shriek}{駭人驚叫}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Hideous Shriek}{駭人驚叫}
   \begin{CardStory}
     一開始聽起來像耳語，\\
     但最後卻變成了撕裂靈魂的驚叫⋯
   \end{CardStory}
-
   請所有探險者立即進行神志檢定：
   \begin{itemize}
     \item[4+] 你抵禦了這聲響。
     \item[1-3] 受到１顆骰的精神傷害。
     \item[0] 受到２顆骰的精神傷害。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{Image in the Mirror}{鏡中影像}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Image in the Mirror}{鏡中影像}
   \begin{CardStory}
     這房間中，有一面古老的鏡子，\\
     你疑惑地看著鏡中自己的倒影，\\
@@ -279,14 +230,11 @@
     { \FontScript 這 \enskip 會 \enskip 有 \enskip 用 \enskip 的 }\\[0.5em]
     並透過鏡子遞給他一件物品⋯
 \end{CardStory}
-
   若你手上沒有道具卡，則由下一位持有道具卡的玩家觸發此效果。\\[0.5em]
   選擇１張你所擁有的道具卡，洗入道具牌庫中。獲得１級知識。\\[0.5em]
-
 \end{EventCard}%
-%
-\begin{EventCard}{\scalebox{-1}[1]{Image in the Mirror}}{\scalebox{-1}[1]{鏡中影像}}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{\scalebox{-1}[1]{Image in the Mirror}}{\scalebox{-1}[1]{鏡中影像}}
   \begin{CardStory}
     這房間中，有一面古老的鏡子，\\
     你驚恐地看著鏡中自己的倒影，\\
@@ -297,64 +245,48 @@
     \scalebox{-1}[1]{ \FontScript 這 \enskip 會 \enskip 有 \enskip 用 \enskip 的 }\\[0.5em]
     並透過鏡子遞給你一件物品⋯
 \end{CardStory}
-
   抽取１張道具卡。\\[0.5em]
-
 \end{EventCard}%
-%
-\begin{EventCard}{It is Meant to Be}{命中註定}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{It is Meant to Be}{命中註定}
   \begin{CardStory}
     你跌坐在地上，\\
     未來的影像閃過你的腦海⋯
   \end{CardStory}
-
   請選擇一項事件發生：
   \begin{itemize}
     \item[•] 窺視道具、事件、或預兆牌庫的前三張牌，依任意順序放回去，但不得說出看到的內容。
     \item[•] 擲４顆骰子並記錄結果。在未來任何擲骰機會，可直接使用這個結果，但不得超過該擲骰機會的最大可能值（僅限一次）。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{Jonah’s Turn}{約拿的回合}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Jonah’s Turn}{約拿的回合}
   \begin{CardStory}
     兩個小男孩在玩陀螺。\\
-
 %     男孩：「約拿，你也想玩呀？」\\
-
 %     約拿：「不，這只有我可以玩！」\\
-
 %     語畢，約拿抓起陀螺，猛力砸向男孩的臉。影像逐漸模糊，依然可看見小男孩倒在血泊中，而約拿卻不停地砸向男孩的臉⋯
 \end{CardStory}
-
   持有\Item{Puzzle Box}的探險者，必須立即將它丟棄，並抽取１張道具卡。\\[0.5em]
   若此事發生，你獲得１級神志，否則你失去１級神志。\\[0.5em]
-
 \end{EventCard}%
-%
-\begin{EventCard}{Lights Out}{燈熄了}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Lights Out}{燈熄了}
   \begin{CardStory}
     你的手電筒忽然熄滅。\\
     別擔心，總會有人帶著電池的⋯
   \end{CardStory}
-
   保留此卡，往後的回合你的行動步數降至１格。\\[0.5em]
   直到你回合結束時，有其他探險者與你處在同一房間之中，棄掉卡片並恢復正常移動。\\[0.5em]
   若你持有\Item{Candle}，或在\Room{Furnace Room}結束回合，亦可棄掉卡片。\\[0.5em]
-
 \end{EventCard}%
-%
-\begin{EventCard}{Locked Safe}{上鎖的保險箱}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Locked Safe}{上鎖的保險箱}
   \begin{CardStory}
     在肖像畫後方的牆上，\\
     你發現了一個隱藏的保險箱。\\
     當然，它肯定有某種陷阱⋯
   \end{CardStory}
-
   放置一枚\TokenSq{Safe}在此房。\\[0.5em]
   每回合一次，任何探險者皆可進行知識檢定嘗試打開保險箱：
   \begin{itemize}
@@ -362,32 +294,26 @@
     \item[2-4] 受到１顆骰的物理傷害。
     \item[0-1] 受到２顆骰的物理傷害。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{Mists From the Walls}{壁上霧靄}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Mists From the Walls}{壁上霧靄}
   \begin{CardStory}
     霧氣從牆上湧現，\\
     煙霧之中浮現了滿滿的人臉⋯\\
     有些看來甚至不像人類⋯
   \end{CardStory}
-
   所有位於地下的玩家，立即進行神志檢定：
   \begin{itemize}
     \item[4+] 臉孔不過是光影的把戲罷了。
     \item[1-3] 受到１顆骰的物理傷害。若你位於有事件符號的房間中，多擲１顆骰。
     \item[0] 受到１顆骰的物理傷害。若你位於有事件符號的房間中，多擲２顆骰。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{Mystic Slide}{神秘滑道}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Mystic Slide}{神秘滑道}
   \begin{CardStory}
     你腳下的地板，忽然滑落並鬆開⋯
   \end{CardStory}
-
   若你位於地下，則由下一位不在地下玩家觸發此效果。\\[0.5em]
   放置一枚\TokenSq{Slide}在此房。\\[0.5em]
   請立即進行力量檢定嘗試控制滑道：
@@ -396,31 +322,25 @@
     \item[0-4] 你失控了！抽取一張地下的房間板塊（若已無未探索的地下房間，則任選一間），跌落至該處，並受到１顆骰的物理傷害。若這是你不是的回合，則無須為新房間抽取事件／道具／預兆卡。
   \end{itemize}
   此後，任何探險者皆可透過檢定嘗試使用滑道，而不須花費行動步數。\\[0.5em]
-
 \end{EventCard}%
-%
-\begin{EventCard}{Night View}{暗夜景象}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Night View}{暗夜景象}
   \begin{CardStory}
     一對幽魂情侶掠過你的面前，\\
     身穿結婚禮服無聲地漫步著⋯
   \end{CardStory}
-
   請立即進行知識檢定：
   \begin{itemize}
     \item[5+] 你瞭解他們曾經居住於此，你呼喚他們的名字，他們轉身向你走來，輕聲告訴你在這屋子裡隱藏的黑暗秘密。獲得１級知識。
     \item[0-4] 你恐懼地退，不敢直視。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{Phone Call}{鈴鈴鈴⋯}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Phone Call}{鈴鈴鈴⋯}
   \begin{CardStory}
     房內的電話忽然響起，\\
     你不自覺地接起這通電話⋯
   \end{CardStory}
-
   請立即擲２顆骰子，一名和藹的奶奶對你說：
   \begin{itemize}
     \item[4] 『茶點和蛋糕！茶點和蛋糕！你永遠是我的小可愛！』\\
@@ -432,49 +352,40 @@
     \item[0] 『小壞蛋必須受到處罰！』\\
 受到２顆骰的物理傷害。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{Possession}{著魔}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Possession}{著魔}
   \begin{CardStory}
     牆上分裂出數道黑影，\\
     你一時受到震驚而無法動作。\\
     黑影卻仍包圍著，\\
     一股惡寒從你心裡冷出來⋯
   \end{CardStory}
-
   請立即選擇任一種屬性進行檢定：
   \begin{itemize}
     \item[4+] 你成功抵禦了黑影的侵蝕，獲得１級該屬性。
     \item[0-3] 黑影吸取你的能量，該屬性被迫降至最低數值。如果該屬性已經是最低數值，則任選另一屬性降至最低。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{Revolving Wall}{旋轉牆}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Revolving Wall}{旋轉牆}
   \begin{CardStory}
     牆面旋轉至另一個地方⋯
   \end{CardStory}
-
   選定該房一面沒有門的牆壁，放置一枚\TokenSq{Wall Switch}在該牆壁上，並立即前往牆後的房間（若牆後無房間則為它抽１間）。\\[0.5em]
   開關雙面可用，此後每回合一次，任何探險者皆可進行知識檢定嘗試尋找旋轉牆的機關：
   \begin{itemize}
     \item[3+] 你發現了旋轉牆的機關。移動至牆後房間，而不須花費行動步數。
     \item[0-2] 你沒有辦法理解機關的奧妙。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{Rotten}{腐敗}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Rotten}{腐敗}
   \begin{CardStory}
     這坊間的味道簡直糟透了！\\
     聞起來像死亡，\\
     有如屠宰場的鮮血⋯
   \end{CardStory}
-
   請立即進行神志檢定：
   \begin{itemize}
     \item[5+] 不過是惱人的氣味罷了。獲得１級神志。
@@ -482,16 +393,13 @@
     \item[1] 失去１級力量和１級速度。
     \item[0] 你不停地作嘔。失去１級全屬性。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{Secret Passage}{秘密通道}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Secret Passage}{秘密通道}
   \begin{CardStory}
     牆壁的一部分滑了開來，\\
     一道發霉的通道正在等著你⋯
   \end{CardStory}
-
   放置一枚\TokenSq{Secret Passage}在此房。\\[0.5em]
   請立即擲３顆骰子，並放置另一枚標記於：
   \begin{itemize}
@@ -502,29 +410,23 @@
   \end{itemize}
   你現在就可以使用祕密通道，就算你已耗盡行動步數亦可。\\[0.5em]
   此後，任何探險者皆可以使用通道，並花費１點行動步數。\\[0.5em]
-
 \end{EventCard}%
-%
-\begin{EventCard}{Secret Stairs}{秘密階梯}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Secret Stairs}{秘密階梯}
   \begin{CardStory}
     一道毛骨悚然的聲響環繞著你，\\
     你發現了一個秘密階梯⋯
   \end{CardStory}
-
   放置一枚\TokenSq{Secret Stairs}在此房，並放置另一枚標記於另一樓層的任意一間房間中。\\[0.5em]
   你現在就可以使用祕密階梯，就算你已耗盡行動步數亦可。若你選擇現在使用階梯，到達新房間時，必須再抽取１張事件卡。\\[0.5em]
   此後，任何探險者皆可以使用通道，並花費１點行動步數。\\[0.5em]
-
 \end{EventCard}%
-%
-\begin{EventCard}{Shrieking Wind}{尖聲狂風}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Shrieking Wind}{尖聲狂風}
   \begin{CardStory}
     風勢持續地增強，\\
     緩慢地漸強成刺耳的咆嘯聲⋯
   \end{CardStory}
-
   請所有位於\Room{Balcony}、\Room{Gardens}、\Room{Graveyard}、\Room{Patio}、\Room{Tower}、以及任何窗口向外房間的探險者，立即進行力量檢定：
   \begin{itemize}
     \item[5+] 穩住腳步
@@ -532,126 +434,102 @@
     \item[1-2] 寒風注入你的心底。受到１顆骰的精神傷害。
     \item[0] 狂風狠狠地擊垮了你。受到１顆骰的物理傷害，同時選擇１件自己的物品，放到\Room{Entrance Hall}。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{Silence}{寂靜}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Silence}{寂靜}
   \begin{CardStory}
     在地底下，任何事物都變得沈默，\\
     彷彿連呼吸聲都消失了⋯
   \end{CardStory}
-
   請所有位於地下的探險者，立即進行神志檢定：
   \begin{itemize}
     \item[4+] 你冷靜地等待聽覺恢復。
     \item[1-3] 你發出一陣無聲的尖叫。受到１顆骰的精神傷害。
     \item[0] 你嚇壞了！受到２顆骰的精神傷害。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{Skeletons}{骨骸}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Skeletons}{骨骸}
   \begin{CardStory}
     即使成了骨骸，\\
     母親與孩子仍然緊緊擁抱著⋯
   \end{CardStory}
-
   放置一枚\TokenSq{Skeletons}在此房。\\[0.5em]
   每回合一次，任何探險者皆可進行神志檢定嘗試挖掘骨骸：
   \begin{itemize}
     \item[5+] 抽取一張道具卡，並移除標記。
     \item[0-4] 你在附近挖掘，卻一無所獲。受到１顆骰的精神傷害。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{Smoke}{煙霧}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Smoke}{煙霧}
   \begin{CardStory}
     煙霧在你四周翻騰，\\
     你一邊咳嗽、一邊擦著眼淚⋯
   \end{CardStory}
-
   放置一枚\TokenSq{Smoke}在此房。\\[0.5em]
   煙霧會阻礙視線。\\[0.5em]
   此後在此房間進行的任何\Roll{Trait}，皆少擲２顆骰子（至少１顆）。\\[0.5em]
-
 \end{EventCard}%
-%
-\begin{EventCard}{Something Hidden}{隱藏著什麼⋯}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Something Hidden}{隱藏著什麼⋯}
   \begin{CardStory}
     這房間似乎有些古怪，\\
     但到底會是什麼呢？\\
     這問題持續困擾著你⋯
   \end{CardStory}
-
   請立即進行知識檢定以找出原因：
   \begin{itemize}
     \item[4+] 牆上的一部分滑了開來，你發現了一個壁櫥。抽取１張道具卡。
     \item[0-3] 仍然找不出原因，使你發狂！失去１級神志。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{Something Slimy}{黏滑之物}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Something Slimy}{黏滑之物}
   \begin{CardStory}
     在你腳踝上的是什麼東西？\\
     是一隻蟲？是誰的觸角？\\
     還是一隻死人的手⋯
   \end{CardStory}
-
   請立即進行速度檢定：
   \begin{itemize}
     \item[4+] 你很快地掙脫。獲得１級速度。
     \item[1-3] 失去１級力量。
     \item[0] 失去１級力量和１級速度。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{Spider}{蜘蛛}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Spider}{蜘蛛}
   \begin{CardStory}
     拳頭般大小的蜘蛛，\\
     突然落在你的肩膀上，\\
     爬入你的頭髮⋯
   \end{CardStory}
-
   請立即進行速度檢定嘗試撥開他，或是進行神志檢定嘗試保持冷靜：
   \begin{itemize}
     \item[4+] 牠離開了。獲得１級該屬性。
     \item[1-3] 牠咬了你！受到１顆骰的物理傷害。
     \item[0] 牠大口地咬去你一塊肉！受到２顆骰的物理傷害。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{The Beckoning}{呼喚}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{The Beckoning}{呼喚}
   \begin{CardStory}
     離開！我必須離開！飛向自由吧！
   \end{CardStory}
-
   請所有位於\Room{Balcony}、\Room{Gardens}、\Room{Graveyard}、\Room{Tower}、以及任何窗口向外的房間的探險者，立即進行神志檢定：</Roll0>
   \begin{itemize}
     \item[3+] 你從邊緣退開。
     \item[0-2] 你縱身跳進了\Room{Patio}，將人物移到此處，並受到１顆骰的物理傷害。（若\Room{Patio}尚未探索，將其找出並放進屋內。）
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{The Lost One}{迷失之魂}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{The Lost One}{迷失之魂}
   \begin{CardStory}
     一名身穿美國內戰晚禮服的女子，\\
     正揮手招喚著你，\\
     不久後，你便陷入了催眠中⋯
   \end{CardStory}
-
   請立即進行知識檢定：
   \begin{itemize}
     \item[5+] 再次清醒過來。獲得１級知識。
@@ -664,76 +542,59 @@
       \end{itemize}
       若已無未探索房間板塊，則直接前往\Room{Entrance Hall}。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{The Voice}{人聲}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{The Voice}{人聲}
   \begin{CardStory}
     「我在地底下，被埋在地底下⋯」\\
     微弱的聲音只說出這樣一句，\\
     便不再發聲⋯
   \end{CardStory}
-
   請立即進行知識檢定：
   \begin{itemize}
     \item[4+] 你在地板下發現了什麼。抽取１張道具卡。
     \item[0-3] 你依循著聲音挖開地板，卻一無所獲。
   \end{itemize}
-
 \end{EventCard}%
-%
-\begin{EventCard}{The Walls}{牆}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{The Walls}{牆}
   \begin{CardStory}
     在這間溫暖的房間中，\\
     活生生的牆壁有如心跳得正動，\\
     你的心臟也跟著這屋子的節奏拍打。忽然間，你被吸入牆壁之中⋯
   \end{CardStory}
-
   請立即抽取一張新的房間板塊，並移到此處。\\[0.5em]
-
 \end{EventCard}%
-%
-\begin{EventCard}{Webs}{蜘蛛網}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{Webs}{蜘蛛網}
   \begin{CardStory}
     一如往常，你伸手把蜘蛛網撥開，\\
     但這次沒能成功，你被黏住了⋯
   \end{CardStory}
-
   請立即進行力量檢定：
   \begin{itemize}
     \item[4+] 你掙脫了，獲得１級力量。
     \item[0-3] 你被黏住了。
   \end{itemize}
-
   若被黏住，保留此卡，並無法再進行任何行動或使用物品，直到掙脫為止。\\[0.5em]
   此後每回合一次，你皆可進行力量檢定達 4+ 嘗試掙脫。其他探險者也能用此方法幫你掙脫。檢定失敗的探險者，回合立即結束。\\[0.5em]
   若檢定三次失敗，你自動掙脫並丟棄此卡，從下回合開始正常行動。\\[0.5em]
-
 \end{EventCard}%
-%
-\begin{EventCard}{What the...?}{咦？}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{What the...?}{咦？}
   \begin{CardStory}
     當你回頭轉向經過的房間時，\\
     卻什麼也沒看到，\\
     只留下一層迷霧⋯
   \end{CardStory}
-
   請將你身處的房間板塊移至同一樓層中，任一尚未探索的門後，房間上的所有標記皆一起移動。\\[0.5em]
-
 \end{EventCard}%
-%
-\begin{EventCard}{WHOOPS!}{哎呀！}
-
+\linebreak[0]%
+\begin{EventCard}{bhh}{WHOOPS!}{哎呀！}
   \begin{CardStory}
     你發現腳下似乎有什麼東西，\\
     正要躲開時，卻被牠狠狠擊倒，\\
     只聽見一陣咯咯笑聲離你遠去⋯
   \end{CardStory}
-
   請將你所有的道具卡（不包含預兆卡）覆蓋於桌面，由你右邊的玩家隨機選擇丟棄其中一張。\\[0.5em]
-
 \end{EventCard}%
