--- a/card.tex
+++ b/card.tex
@@ -12,6 +12,7 @@
 
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{0pt}
+\setlength{\lineskip}{0pt}
 \setlist{leftmargin=2em,font=\bfseries}
 
 \title{BHH - Card}
