--- a/data/label.sty
+++ b/data/label.sty
@@ -149,6 +149,7 @@
 \customlabel{boss:Mummy}{木乃伊}
 
 % Monster
+\customlabel{monster:small}{小怪物}
 \customlabel{monster:red}{紅色怪物}
 \customlabel{monster:orange}{橙色怪物}
 \customlabel{monster:yellow}{黃色怪物}
@@ -164,7 +165,7 @@
 \customlabel{token-sq:Blessing}{祝福}
 \customlabel{token-sq:Burial Mound}{墳塚}
 \customlabel{token-sq:Closet}{壁櫥}
-\customlabel{token-sq:Drip}{滴落}
+\customlabel{token-sq:Drip}{水滴聲}
 \customlabel{token-sq:Fountain}{噴泉}
 \customlabel{token-sq:Plant}{植物}
 \customlabel{token-sq:Safe}{保險箱}
@@ -193,8 +194,13 @@
 %
 
 % Roll
-\customlabel{roll:Attack}{戰鬥}
+\customlabel{roll:Combat}{戰鬥}
 \customlabel{roll:Damage}{傷害}
+\customlabel{roll:Event}{事件}
 \customlabel{roll:Haunt}{作祟}
-\customlabel{roll:Task}{事件}
 \customlabel{roll:Trait}{屬性}
+
+% Usage
+\customlabel{usage:}{}
+\customlabel{usage:companion}{同伴}
+\customlabel{usage:weapon}{武器}
