--- a/include/text.sty
+++ b/include/text.sty
@@ -31,3 +31,7 @@
 % Roll
 \newcommand{\Roll}[1]{\ref{roll:#1}檢定}
 \newcommand{\RollBrief}[1]{\ref{roll:#1}}
+\newcommand{\RollAny}{擲骰}
+
+% Usage
+\newcommand{\Usage}[1]{\ref{usage:#1}}
