--- a/card.tex
+++ b/card.tex
@@ -20,8 +20,8 @@
 \begin{document}
 
 \input{src/card/bhh/event}
-% \input{src/card/bhh/item}
-% \input{src/card/bhh/omen}
+\input{src/card/bhh/item}
+\input{src/card/bhh/omen}
 
 % \input{src/card/bww/event}
 % \input{src/card/bww/item}
