--- a/component/card.sty
+++ b/component/card.sty
@@ -3,29 +3,39 @@
 % 10.5cm x 5.45cm
 
 \setlength{\fboxrule}{0pt}
-\setlength{\fboxsep}{1.25em}
+\setlength{\fboxsep}{0.5cm}
 
 % Card
 \newsavebox{\mybox}
-\newenvironment{BHHCard}[4]{%
-  \def\imgcmd{\includegraphics[width=5.45cm]{img/#4_background.png}}%
+\newenvironment{BHHCard}[6]{%
+  \def\bgcmd{\includegraphics[width=5.45cm]{img/#3_background.png}}%
+  \def\iconcmd{\includegraphics[height=0.5cm]{img/#3_icon.png}}%
+  \def\seriescmd{\includegraphics[width=1em]{img/#4.png}}%
+  \def\usagecmd{\Usage{#5}}%
+  \def\footercmd{#6}%
   \begin{lrbox}{\mybox}%
     \begin{minipage}[t][\dimexpr10.5cm-2\fboxsep-2\fboxrule\relax]{\dimexpr5.45cm-2\fboxsep-2\fboxrule\relax}%
       ~\par%
       { \centering%
-        {\FontTitle \LARGE #1} \par%
+        {\FontTitle \Large #1} \par%
         {\FontSubTitle \small \textcolor{milk-dark}{\uppercase{#2}}} \par%
       }%
       \vspace*{0.5em}%
       \small%
 }{%
+      \vfill%
+      \small%
+      { \centering \iconcmd \par }%
+      \footercmd%
     \end{minipage}%
   \end{lrbox}%
   %
   \sbox\mybox{\fbox{\usebox\mybox}}%
   \mbox{%
-    \rlap{\raisebox{\dimexpr-\dp\mybox}{\imgcmd}}%
+    \rlap{\raisebox{\dimexpr-\dp\mybox}{\bgcmd}}%
+    \rlap{\raisebox{-0.5\fboxsep}{\hspace*{\fboxsep}\mbox{\usagecmd}}}%
     \usebox\mybox%
+    \llap{\raisebox{-0.5\fboxsep}{\seriescmd\hspace*{\fboxsep}}}%
   }%
 }
 
@@ -39,23 +49,23 @@
 
 % Event Card
 \newenvironment{EventCard}[3]{%
-  \begin{BHHCard}{#3}{#2}{#1}{event}%
+  \begin{BHHCard}{#3}{#2}{event}{#1}{}{~}%
 }{%
   \end{BHHCard}%
 }
 
 % Item Card
-\newenvironment{ItemCard}[2]{%
-  \def\ThisName{\ItemBrief{#2}}
-  \begin{BHHCard}{\ThisName}{#2}{#1}{item}%
+\newenvironment{ItemCard}[3]{%
+  \def\ThisName{\ItemBrief{#2}}%
+  \begin{BHHCard}{\ThisName}{#2}{item}{#1}{#3}{~}%
 }{%
   \end{BHHCard}%
 }
 
 % Omen Card
-\newenvironment{OmenCard}[2]{%
-  \def\ThisName{\OmenBrief{#2}}
-  \begin{BHHCard}{\ThisName}{#2}{#1}{omen}%
+\newenvironment{OmenCard}[3]{%
+  \def\ThisName{\OmenBrief{#2}}%
+  \begin{BHHCard}{\ThisName}{#2}{omen}{#1}{#3}{請立即進行作祟檢定。}%
 }{%
   \end{BHHCard}%
 }
