--- a/src/card/bhh/event.tex
+++ b/src/card/bhh/event.tex
@@ -6,8 +6,8 @@
     似乎有什麼正努力對抗著\\
     這屋子裡的邪惡勢力。
   \end{CardStory}
-  放置一枚\TokenSq{Blessing}在此房。\smallskip
-  此後，任何英雄在此房內進行的\Roll{Trait}，皆多擲１顆骰（至多８顆）。\smallskip
+  放置一枚\TokenSq{Blessing}在此房。\smallbreak
+  此後，任何英雄在此房內進行的\Roll{Trait}，皆多擲１顆骰（至多８顆）。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
 \begin{EventCard}{bhh}{Angry Being}{惱人的生物}
@@ -58,7 +58,7 @@
     壁櫥的門半掩著，\\
     裡面肯定有什麼東西躲藏著⋯
   \end{CardStory}
-  放置一枚\TokenSq{Closet}在此房。\\[0.5em]
+  放置一枚\TokenSq{Closet}在此房。\smallbreak
   每回合一次，任何探險者皆可擲２顆骰子嘗試打開壁櫥：
   \begin{itemize}
     \item[4] 抽取１張道具卡。
@@ -88,8 +88,8 @@
     在你們四目相接時，\\
     他突然拿起小小的矛向你跳去⋯
   \end{CardStory}
-  你的右方的玩家代替傀儡，對你的進行力量４的攻擊。\\[0.5em]
-  若你因此受傷，除你以外擁有\Omen{Spear}的玩家，獲得２級力量。\\[0.5em]
+  你的右方的玩家代替傀儡，對你的進行力量４的攻擊。\smallbreak
+  若你因此受傷，除你以外擁有\Omen{Spear}的玩家，獲得２級力量。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
 \begin{EventCard}{bhh}{Debris}{瓦礫}
@@ -102,9 +102,9 @@
     \item[1-2] 你被瓦礫活埋！受到１顆骰的物理傷害。
     \item[0] 你被瓦礫活埋！受到２顆骰的物理傷害。
   \end{itemize}
-  若被活埋，保留此卡，並無法再進行任何行動或使用物品，直到掙脫為止。\\[0.5em]
-  此後每回合一次，你皆可進行力量檢定達 4+ 嘗試掙脫。其他探險者也能用此方法幫你掙脫。\\[0.5em]
-  若檢定三次失敗，你自動掙脫並丟棄此卡，從下回合開始正常行動。\\[0.5em]
+  若被活埋，保留此卡，並無法再進行任何行動或使用物品，直到掙脫為止。\smallbreak
+  此後每回合一次，你皆可進行力量檢定達 4+ 嘗試掙脫。其他探險者也能用此方法幫你掙脫。\smallbreak
+  若檢定三次失敗，你自動掙脫並丟棄此卡，從下回合開始正常行動。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
 \begin{EventCard}{bhh}{Disquieting Sounds}{令人不安的聲響}
@@ -126,8 +126,8 @@
   \begin{CardStory}
     一段有節奏的聲音刺激你的腦袋⋯
   \end{CardStory}
-  放置一枚\TokenSq{Drip}在此房。\\[0.5em]
-  此後，在此房間進行的任何\Roll{Trait}，皆少擲１顆骰子（至少１顆）。\\[0.5em]
+  放置一枚\TokenSq{Drip}在此房。\smallbreak
+  此後，任何探險者在此房間進行的\Roll{Trait}，皆少擲１顆骰子（至少１顆）。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
 \begin{EventCard}{bhh}{Footsteps}{腳印}
@@ -172,7 +172,7 @@
     \item[4+] 你將塵土拍落。獲得１級力量。
     \item[0-3] 事情不太對勁！保留此卡。每當你的回合開始時，受到１顆骰的物理傷害。
   \end{itemize}
-  若你回合結束時，停留在\Room{Balcony}、\Room{Gardens}、\Room{Graveyard}、\Room{Gymnasium}、\Room{Larder}、\Room{Patio}、\Room{Tower}，或是因道具卡而讓任一屬性升級時，丟棄此卡並回復正常。\\[0.5em]
+  若你回合結束時，停留在\Room{Balcony}、\Room{Gardens}、\Room{Graveyard}、\Room{Gymnasium}、\Room{Larder}、\Room{Patio}、\Room{Tower}，或是因道具卡而讓任一屬性升級時，丟棄此卡並回復正常。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
 \begin{EventCard}{bhh}{Groundskeeper}{園丁}
@@ -193,7 +193,7 @@
   \begin{CardStory}
     一陣寒風吹過房間，三名男人\\
     被破爛麻繩吊掛在天花板上。\\
-    他們靜靜地擺動者，\\
+    他們靜靜地擺動著，\\
     用冰冷、死亡的眼神注視著你，\\
     接著逐漸化為塵土，\\
     令你感到窒息⋯
@@ -201,9 +201,9 @@
   請立即對所有屬性進行檢定：
   \begin{itemize}
     \item[2+] 該屬性不受影響。
-    \item[0-3] 失去１級該屬性。
+    \item[0-1] 失去１級該屬性。
   \end{itemize}
-  若所有屬性皆通過檢定，獲得１級任意屬性。\\[0.5em]
+  若所有屬性皆通過檢定，獲得１級任意屬性。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
 \begin{EventCard}{bhh}{Hideous Shriek}{駭人驚叫}
@@ -226,12 +226,12 @@
     發現他不但自行動了起來，\\
     還帶著一臉恐懼。\\
     你瞭解到這是不同時空中的自己，\\
-    而他需要幫助。於是你在鏡面寫下\\[0.5em]
-    { \FontScript 這 \enskip 會 \enskip 有 \enskip 用 \enskip 的 }\\[0.5em]
+    而他需要幫助。於是你在鏡面寫下\smallbreak
+    { \FontScript 這 \enskip 會 \enskip 有 \enskip 用 \enskip 的 }\smallbreak
     並透過鏡子遞給他一件物品⋯
 \end{CardStory}
-  若你手上沒有道具卡，則由下一位持有道具卡的玩家觸發此效果。\\[0.5em]
-  選擇１張你所擁有的道具卡，洗入道具牌庫中。獲得１級知識。\\[0.5em]
+  若你手上沒有道具卡，則由下一位持有道具卡的玩家觸發此效果。\smallbreak
+  選擇１張你所擁有的道具卡，洗入道具牌庫中。獲得１級知識。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
 \begin{EventCard}{bhh}{\scalebox{-1}[1]{Image in the Mirror}}{\scalebox{-1}[1]{鏡中影像}}
@@ -241,11 +241,11 @@
     發現他不但自行動了起來，\\
     還帶著一臉疑惑。\\
     你瞭解到這是不同時空中的自己，\\
-    而他會幫助你。倒影在鏡面寫下\\[0.5em]
-    \scalebox{-1}[1]{ \FontScript 這 \enskip 會 \enskip 有 \enskip 用 \enskip 的 }\\[0.5em]
+    而他會幫助你。倒影在鏡面寫下\smallbreak
+    \scalebox{-1}[1]{ \FontScript 這 \enskip 會 \enskip 有 \enskip 用 \enskip 的 }\smallbreak
     並透過鏡子遞給你一件物品⋯
 \end{CardStory}
-  抽取１張道具卡。\\[0.5em]
+  抽取１張道具卡。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
 \begin{EventCard}{bhh}{It is Meant to Be}{命中註定}
@@ -263,12 +263,12 @@
 \begin{EventCard}{bhh}{Jonah’s Turn}{約拿的回合}
   \begin{CardStory}
     兩個小男孩在玩陀螺。\\
-%     男孩：「約拿，你也想玩呀？」\\
-%     約拿：「不，這只有我可以玩！」\\
-%     語畢，約拿抓起陀螺，猛力砸向男孩的臉。影像逐漸模糊，依然可看見小男孩倒在血泊中，而約拿卻不停地砸向男孩的臉⋯
+    男孩：「約拿，你也想玩呀？」\\
+    約拿：「不，這只有我可以玩！」\\
+    語畢，約拿抓起陀螺，猛力砸向男孩的臉。影像逐漸模糊，依然可看見小男孩倒在血泊中，而約拿卻不停地砸向男孩的臉⋯
 \end{CardStory}
-  持有\Item{Puzzle Box}的探險者，必須立即將它丟棄，並抽取１張道具卡。\\[0.5em]
-  若此事發生，你獲得１級神志，否則你失去１級神志。\\[0.5em]
+  持有\Item{Puzzle Box}的探險者，必須立即將它丟棄，提供約拿玩具玩，並抽取１張道具卡。\smallbreak
+  若此事發生，你獲得１級神志，否則你失去１級神志。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
 \begin{EventCard}{bhh}{Lights Out}{燈熄了}
@@ -276,9 +276,9 @@
     你的手電筒忽然熄滅。\\
     別擔心，總會有人帶著電池的⋯
   \end{CardStory}
-  保留此卡，往後的回合你的行動步數降至１格。\\[0.5em]
-  直到你回合結束時，有其他探險者與你處在同一房間之中，棄掉卡片並恢復正常移動。\\[0.5em]
-  若你持有\Item{Candle}，或在\Room{Furnace Room}結束回合，亦可棄掉卡片。\\[0.5em]
+  保留此卡，往後的回合你的行動步數降至１格。\smallbreak
+  直到你回合結束時，有其他探險者與你處在同一房間之中，棄掉卡片並恢復正常移動。\smallbreak
+  若你持有\Item{Candle}，或在\Room{Furnace Room}結束回合，亦可棄掉卡片。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
 \begin{EventCard}{bhh}{Locked Safe}{上鎖的保險箱}
@@ -287,7 +287,7 @@
     你發現了一個隱藏的保險箱。\\
     當然，它肯定有某種陷阱⋯
   \end{CardStory}
-  放置一枚\TokenSq{Safe}在此房。\\[0.5em]
+  放置一枚\TokenSq{Safe}在此房。\smallbreak
   每回合一次，任何探險者皆可進行知識檢定嘗試打開保險箱：
   \begin{itemize}
     \item[5+] 你成功打開了保險箱，抽２張道具卡，並移除標記。
@@ -314,14 +314,15 @@
   \begin{CardStory}
     你腳下的地板，忽然滑落並鬆開⋯
   \end{CardStory}
-  若你位於地下，則由下一位不在地下玩家觸發此效果。\\[0.5em]
-  放置一枚\TokenSq{Slide}在此房。\\[0.5em]
+  \footnotesize
+  若你位於地下，則由下一位不在地下玩家觸發此效果。\smallbreak
+  放置一枚\TokenSq{Slide}在此房。\smallbreak
   請立即進行力量檢定嘗試控制滑道：
   \begin{itemize}
-    \item[5+] 你成功控制住滑道。移至低一樓層的任意一間房間中。
-    \item[0-4] 你失控了！抽取一張地下的房間板塊（若已無未探索的地下房間，則任選一間），跌落至該處，並受到１顆骰的物理傷害。若這是你不是的回合，則無須為新房間抽取事件／道具／預兆卡。
+    \item[5+] 你成功控制住滑道。移至任意較低樓層的任意一間房間中。
+    \item[0-4] 你失控了！抽取一張地下的房間板塊（若已無未探索的地下房間，則任選一間），跌落至該處，並受到１顆骰的物理傷害。若這你不是的回合，則無須為新房間抽取事件／道具／預兆卡。
   \end{itemize}
-  此後，任何探險者皆可透過檢定嘗試使用滑道，而不須花費行動步數。\\[0.5em]
+  此後，任何探險者皆可透過檢定嘗試使用滑道，而不須花費行動步數。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
 \begin{EventCard}{bhh}{Night View}{暗夜景象}
@@ -372,7 +373,7 @@
   \begin{CardStory}
     牆面旋轉至另一個地方⋯
   \end{CardStory}
-  選定該房一面沒有門的牆壁，放置一枚\TokenSq{Wall Switch}在該牆壁上，並立即前往牆後的房間（若牆後無房間則為它抽１間）。\\[0.5em]
+  選定該房一面沒有門的牆壁，放置一枚\TokenSq{Wall Switch}在該牆壁上，並立即前往牆後的房間（若牆後無房間則為它抽１間）。\smallbreak
   開關雙面可用，此後每回合一次，任何探險者皆可進行知識檢定嘗試尋找旋轉牆的機關：
   \begin{itemize}
     \item[3+] 你發現了旋轉牆的機關。移動至牆後房間，而不須花費行動步數。
@@ -382,7 +383,7 @@
 \linebreak[0]%
 \begin{EventCard}{bhh}{Rotten}{腐敗}
   \begin{CardStory}
-    這坊間的味道簡直糟透了！\\
+    這房間的味道簡直糟透了！\\
     聞起來像死亡，\\
     有如屠宰場的鮮血⋯
   \end{CardStory}
@@ -400,7 +401,7 @@
     牆壁的一部分滑了開來，\\
     一道發霉的通道正在等著你⋯
   \end{CardStory}
-  放置一枚\TokenSq{Secret Passage}在此房。\\[0.5em]
+  放置一枚\TokenSq{Secret Passage}在此房。\smallbreak
   請立即擲３顆骰子，並放置另一枚標記於：
   \begin{itemize}
     \item[6] 任意一間房間中。
@@ -408,8 +409,8 @@
     \item[2-3] 任意一間地面房間中。
     \item[0-1] 任意一間地下房間中。
   \end{itemize}
-  你現在就可以使用祕密通道，就算你已耗盡行動步數亦可。\\[0.5em]
-  此後，任何探險者皆可以使用通道，並花費１點行動步數。\\[0.5em]
+  你現在就可以使用祕密通道，就算你已耗盡行動步數亦可。\smallbreak
+  此後，任何探險者皆可以使用通道，並花費１點行動步數。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
 \begin{EventCard}{bhh}{Secret Stairs}{秘密階梯}
@@ -417,9 +418,9 @@
     一道毛骨悚然的聲響環繞著你，\\
     你發現了一個秘密階梯⋯
   \end{CardStory}
-  放置一枚\TokenSq{Secret Stairs}在此房，並放置另一枚標記於另一樓層的任意一間房間中。\\[0.5em]
-  你現在就可以使用祕密階梯，就算你已耗盡行動步數亦可。若你選擇現在使用階梯，到達新房間時，必須再抽取１張事件卡。\\[0.5em]
-  此後，任何探險者皆可以使用通道，並花費１點行動步數。\\[0.5em]
+  放置一枚\TokenSq{Secret Stairs}在此房，並放置另一枚標記於另一樓層的任意一間房間中。\smallbreak
+  你現在就可以使用祕密階梯，就算你已耗盡行動步數亦可。若你選擇現在使用階梯，到達新房間時，必須再抽取１張事件卡。\smallbreak
+  此後，任何探險者皆可以使用通道，並花費１點行動步數。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
 \begin{EventCard}{bhh}{Shrieking Wind}{尖聲狂風}
@@ -429,7 +430,7 @@
   \end{CardStory}
   請所有位於\Room{Balcony}、\Room{Gardens}、\Room{Graveyard}、\Room{Patio}、\Room{Tower}、以及任何窗口向外房間的探險者，立即進行力量檢定：
   \begin{itemize}
-    \item[5+] 穩住腳步
+    \item[5+] 你成功穩住腳步。
     \item[3-4] 強風將你擊倒。受到１顆骰的物理傷害。
     \item[1-2] 寒風注入你的心底。受到１顆骰的精神傷害。
     \item[0] 狂風狠狠地擊垮了你。受到１顆骰的物理傷害，同時選擇１件自己的物品，放到\Room{Entrance Hall}。
@@ -454,7 +455,7 @@
     即使成了骨骸，\\
     母親與孩子仍然緊緊擁抱著⋯
   \end{CardStory}
-  放置一枚\TokenSq{Skeletons}在此房。\\[0.5em]
+  放置一枚\TokenSq{Skeletons}在此房。\smallbreak
   每回合一次，任何探險者皆可進行神志檢定嘗試挖掘骨骸：
   \begin{itemize}
     \item[5+] 抽取一張道具卡，並移除標記。
@@ -467,9 +468,9 @@
     煙霧在你四周翻騰，\\
     你一邊咳嗽、一邊擦著眼淚⋯
   \end{CardStory}
-  放置一枚\TokenSq{Smoke}在此房。\\[0.5em]
-  煙霧會阻礙視線。\\[0.5em]
-  此後在此房間進行的任何\Roll{Trait}，皆少擲２顆骰子（至少１顆）。\\[0.5em]
+  放置一枚\TokenSq{Smoke}在此房。\smallbreak
+  煙霧會阻礙視線。\smallbreak
+  此後，任何探險者在此房間進行的\Roll{Trait}，皆少擲２顆骰子（至少１顆）。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
 \begin{EventCard}{bhh}{Something Hidden}{隱藏著什麼⋯}
@@ -517,7 +518,7 @@
   \begin{CardStory}
     離開！我必須離開！飛向自由吧！
   \end{CardStory}
-  請所有位於\Room{Balcony}、\Room{Gardens}、\Room{Graveyard}、\Room{Tower}、以及任何窗口向外的房間的探險者，立即進行神志檢定：</Roll0>
+  請所有位於\Room{Balcony}、\Room{Gardens}、\Room{Graveyard}、\Room{Tower}、以及任何窗口向外的房間的探險者，立即進行神志檢定：
   \begin{itemize}
     \item[3+] 你從邊緣退開。
     \item[0-2] 你縱身跳進了\Room{Patio}，將人物移到此處，並受到１顆骰的物理傷害。（若\Room{Patio}尚未探索，將其找出並放進屋內。）
@@ -530,6 +531,7 @@
     正揮手招喚著你，\\
     不久後，你便陷入了催眠中⋯
   \end{CardStory}
+  \footnotesize
   請立即進行知識檢定：
   \begin{itemize}
     \item[5+] 再次清醒過來。獲得１級知識。
@@ -563,7 +565,7 @@
     活生生的牆壁有如心跳得正動，\\
     你的心臟也跟著這屋子的節奏拍打。忽然間，你被吸入牆壁之中⋯
   \end{CardStory}
-  請立即抽取一張新的房間板塊，並移到此處。\\[0.5em]
+  請立即抽取一張新的房間板塊，並移到此處。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
 \begin{EventCard}{bhh}{Webs}{蜘蛛網}
@@ -576,9 +578,9 @@
     \item[4+] 你掙脫了，獲得１級力量。
     \item[0-3] 你被黏住了。
   \end{itemize}
-  若被黏住，保留此卡，並無法再進行任何行動或使用物品，直到掙脫為止。\\[0.5em]
-  此後每回合一次，你皆可進行力量檢定達 4+ 嘗試掙脫。其他探險者也能用此方法幫你掙脫。檢定失敗的探險者，回合立即結束。\\[0.5em]
-  若檢定三次失敗，你自動掙脫並丟棄此卡，從下回合開始正常行動。\\[0.5em]
+  若被黏住，保留此卡，並無法再進行任何行動或使用物品，直到掙脫為止。\smallbreak
+  此後每回合一次，你皆可進行力量檢定達 4+ 嘗試掙脫。其他探險者也能用此方法幫你掙脫。檢定失敗的探險者，回合立即結束。\smallbreak
+  若檢定三次失敗，你自動掙脫並丟棄此卡，從下回合開始正常行動。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
 \begin{EventCard}{bhh}{What the...?}{咦？}
@@ -587,7 +589,7 @@
     卻什麼也沒看到，\\
     只留下一層迷霧⋯
   \end{CardStory}
-  請將你身處的房間板塊移至同一樓層中，任一尚未探索的門後，房間上的所有標記皆一起移動。\\[0.5em]
+ 請將你身處的房間板塊移至同一樓層中，任一尚未探索的門後，房間上的所有標記皆一起移動。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
 \begin{EventCard}{bhh}{WHOOPS!}{哎呀！}
@@ -596,5 +598,5 @@
     正要躲開時，卻被牠狠狠擊倒，\\
     只聽見一陣咯咯笑聲離你遠去⋯
   \end{CardStory}
-  請將你所有的道具卡（不包含預兆卡）覆蓋於桌面，由你右邊的玩家隨機選擇丟棄其中一張。\\[0.5em]
+ 請將你所有的道具卡（不包含預兆卡）覆蓋於桌面，由你右邊的玩家隨機選擇丟棄其中一張。\smallbreak
 \end{EventCard}%
