--- a/src/card/bhh/omen.tex
+++ b/src/card/bhh/omen.tex
@@ -1,15 +1,125 @@
 %!TEX root = ../../../card.tex
 
-\OmenName{Bite}
-\OmenName{Book}
-\OmenName{Crystal Ball}
-\OmenName{Dog}
-\OmenName{Girl}
-\OmenName{Holy Symbol}
-\OmenName{Madman}
-\OmenName{Mask}
-\OmenName{Medallion}
-\OmenName{Ring}
-\OmenName{Skull}
-\OmenName{Spear}
-\OmenName{Spirit Board}
+\begin{OmenCard}{bhh}{Bite}{}
+  \begin{CardStory}
+    一聲咆哮，瀰漫著死亡的氣息，\\
+    接續著痛苦、黑暗，然後消失⋯
+  \end{CardStory}
+  當你抽到此卡時，某種東西突然咬上了你！\smallbreak
+  你的右方的玩家代替神秘生物，擲４顆骰子對你的攻擊，你以力量進行防禦。\smallbreak
+  攻擊後，神秘生物又再一次隱沒在黑暗當中。\smallbreak
+  \ThisName{}不可被棄置、交易、或搶奪。\smallbreak
+\end{OmenCard}%
+\linebreak[0]%
+\begin{OmenCard}{bhh}{Book}{}
+  \begin{CardStory}
+    這是一本日記？實驗筆記？\\
+    遠古手稿？還是一本妄語呢？
+  \end{CardStory}
+  立即獲得２級知識。\smallbreak
+  若你失去\ThisName{}，立即失去２級知識。\smallbreak
+\end{OmenCard}%
+\linebreak[0]%
+\begin{OmenCard}{bhh}{Crystal Ball}{}
+  \begin{CardStory}
+    在球體中浮現了模糊的影像。
+  \end{CardStory}
+  在作祟發生後，每回合一次，你可進行知識檢定嘗試窺視\ThisName{}：
+  \begin{itemize}
+    \item[4+] 你看見真相。從道具牌堆中選擇一張卡，將牌堆洗勻後將選擇的卡放在牌堆頂端。
+    \item[1-3] 你不自覺的地避開了視線。失去１級神志。
+    \item[0] 你直視了地獄景象。失去２級神志。
+  \end{itemize}
+\end{OmenCard}%
+\linebreak[0]%
+\begin{OmenCard}{bhh}{Dog}{companion}
+  \begin{CardStory}
+    看似友善的癩皮狗⋯\\
+    至少你希望牠是⋯
+  \end{CardStory}
+  \footnotesize
+  立即獲得１級力量和１級神志。\smallbreak
+  若你失去\ThisName{}，立即失去１級力量和１級神志。\smallbreak
+  使用一個小怪物標示代表這隻\ThisName{}，將牠放在你的房間裡。（不要和其他怪物搞混。）\smallbreak
+  每回合一次，你可差遣\ThisName{}來回於六格內的房間（可以使用門和樓梯），途中牠可以攜帶一件物品去丟下，同時也可以撿拾並帶回一件掉落的物品。\smallbreak
+  \ThisName{}不會被對手阻擋。牠不能通過單向的通道、或任何需要\RollAny{}的房間。牠也不能攜帶會減緩移動速度的物品。\smallbreak
+  \ThisName{}不可被棄置、交易、或搶奪。\smallbreak
+\end{OmenCard}%
+\linebreak[0]%
+\begin{OmenCard}{bhh}{Girl}{companion}
+  \begin{CardStory}
+    被困住的孤獨女孩，你拯救了她！
+  \end{CardStory}
+  立即獲得１級神志和１級知識。\smallbreak
+  若你失去\ThisName{}，立即失去１級神志和１級知識。\smallbreak
+  \ThisName{}不可被棄置、交易、或搶奪。\smallbreak
+\end{OmenCard}%
+\linebreak[0]%
+\begin{OmenCard}{bhh}{Holy Symbol}{}
+  \begin{CardStory}
+    混沌世界中的和平象徵。
+  \end{CardStory}
+  立即獲得２級神志。\smallbreak
+  若你失去\ThisName{}，立即失去２級神志。\smallbreak
+\end{OmenCard}%
+\linebreak[0]%
+\begin{OmenCard}{bhh}{Madman}{companion}
+  \begin{CardStory}
+    口吐白沫、胡言亂語的瘋漢。
+  \end{CardStory}
+  立即獲得２級力量，並失去１級神志。\smallbreak
+  若你失去\ThisName{}，立即失去２級力量，並獲得１級神志。\smallbreak
+  \ThisName{}不可被棄置、交易、或搶奪。\smallbreak
+\end{OmenCard}%
+\linebreak[0]%
+\begin{OmenCard}{bhh}{Mask}{}
+  \begin{CardStory}
+    可以用來隱藏你意圖的陰沈面具。
+  \end{CardStory}
+  每回合一次，你可進行神志檢定嘗試使用\ThisName{}：
+  \begin{itemize}
+    \item[4+] 你可自由戴上或脫下\ThisName{}。
+    \item[0-3] 你本回合無法使用\ThisName{}。
+  \end{itemize}
+  戴上面具後，立即獲得２級神志，並失去２級知識。\smallbreak
+  脫下面具後，立即失去２級神志，並獲得２級知識。\smallbreak
+\end{OmenCard}%
+\linebreak[0]%
+\begin{OmenCard}{bhh}{Medallion}{}
+  \begin{CardStory}
+    刻有五芒星標誌的徽章。
+  \end{CardStory}
+  你將不再受到\Room{Pentagram Chamber}、\Room{Crypt}、\Room{Graveyard}的影響。\smallbreak
+\end{OmenCard}%
+\linebreak[0]%
+\begin{OmenCard}{bhh}{Ring}{}
+  \begin{CardStory}
+    一個磨損的戒指，\\
+    上頭有著難以理解的刻記。
+  \end{CardStory}
+  當你遇攻擊的對手有神志屬性時，你可以使用\ThisName{}進行神志攻擊，嘗試造成精神傷害，對手亦須以神志進行防禦。\smallbreak
+\end{OmenCard}%
+\linebreak[0]%
+\begin{OmenCard}{bhh}{Skull}{}
+  \begin{CardStory}
+    破碎且缺牙的骷髏頭。
+  \end{CardStory}
+  當你受到精神傷害時，可將所有的傷害轉為物理傷害，但不可只轉換部分傷害。\smallbreak
+\end{OmenCard}%
+\linebreak[0]%
+\begin{OmenCard}{bhh}{Spear}{weapon}
+  \begin{CardStory}
+    充滿能量而震動的武器。
+  \end{CardStory}
+  當你使用\ThisName{}進行力量攻擊時，多擲２顆骰。\smallbreak
+  \ThisName{}不得用於防禦。\smallbreak
+  你不可同時使用多樣武器攻擊。\smallbreak
+\end{OmenCard}%
+\linebreak[0]%
+\begin{OmenCard}{bhh}{Spirit Board}{}
+  \begin{CardStory}
+    刻印著招喚死亡的文字與數字。
+  \end{CardStory}
+  此後每回合移動之前，你可以使用\ThisName{}窺視房間牌堆頂端的板塊。\smallbreak
+  在作祟發生之後，每當你使用\ThisName{}時，叛徒可遣任意數量的怪物向你移動１格。若你身為叛徒，則忽略此效果。若沒有叛徒，則所有怪物皆須向你前進１格。\smallbreak
+\end{OmenCard}%
