--- a/card.tex
+++ b/card.tex
@@ -19,12 +19,12 @@
 
 \begin{document}
 
-\input{src/card/bhh/event}
-\input{src/card/bhh/item}
-\input{src/card/bhh/omen}
-
-% \input{src/card/bww/event}
-% \input{src/card/bww/item}
-% \input{src/card/bww/omen}
+\input{src/card/bhh/event}%
+\input{src/card/bhh/item}%
+\input{src/card/bhh/omen}%
+%
+\input{src/card/bww/event}%
+\input{src/card/bww/item}%
+\input{src/card/bww/omen}%
 
 \end{document}
