--- a/data/label.sty
+++ b/data/label.sty
@@ -79,6 +79,66 @@
 % Card
 %
 
+% Event BHH
+\customlabel{event:A Moment of Hope}{希望時刻}
+\customlabel{event:Angry Being}{惱人的生物}
+\customlabel{event:Bloody Vision}{血腥幻象}
+\customlabel{event:Burning Man}{燃燒之人}
+\customlabel{event:Closet Door}{壁櫥}
+\customlabel{event:Creepy Crawlies}{恐怖爬蟲}
+\customlabel{event:Creepy Puppet}{陰森傀儡}
+\customlabel{event:Debris}{瓦礫}
+\customlabel{event:Disquieting Sounds}{令人不安的聲響}
+\customlabel{event:Drip... Drip... Drip...}{滴…滴…滴…}
+\customlabel{event:Footsteps}{腳印}
+\customlabel{event:Funeral}{葬儀}
+\customlabel{event:Grave Dirt}{墳土飛揚}
+\customlabel{event:Groundskeeper}{園丁}
+\customlabel{event:Hanged Men}{上吊之人}
+\customlabel{event:Hideous Shriek}{駭人驚叫}
+\customlabel{event:Image in the Mirror}{鏡中影像}
+\customlabel{event:rorriM eht ni egamI}{像影中鏡}
+\customlabel{event:It is Meant to Be}{命中註定}
+\customlabel{event:Jonah’s Turn}{約拿的回合}
+\customlabel{event:Lights Out}{燈熄了}
+\customlabel{event:Locked Safe}{上鎖的保險箱}
+\customlabel{event:Mists From the Walls}{壁上霧靄}
+\customlabel{event:Mystic Slide}{神秘滑道}
+\customlabel{event:Night View}{暗夜景象}
+\customlabel{event:Phone Call}{鈴鈴鈴…}
+\customlabel{event:Possession}{著魔}
+\customlabel{event:Revolving Wall}{旋轉牆}
+\customlabel{event:Rotten}{腐敗}
+\customlabel{event:Secret Passage}{秘密通道}
+\customlabel{event:Secret Stairs}{秘密階梯}
+\customlabel{event:Shrieking Wind}{尖聲狂風}
+\customlabel{event:Silence}{寂靜}
+\customlabel{event:Skeletons}{骨骸}
+\customlabel{event:Smoke}{煙霧}
+\customlabel{event:Something Hidden}{隱藏著什麼…}
+\customlabel{event:Something Slimy}{黏滑之物}
+\customlabel{event:Spider}{蜘蛛}
+\customlabel{event:The Beckoning}{呼喚}
+\customlabel{event:The Lost One}{迷失之魂}
+\customlabel{event:The Voice}{人聲}
+\customlabel{event:The Walls}{牆}
+\customlabel{event:Webs}{蜘蛛網}
+\customlabel{event:What the...?}{咦？}
+\customlabel{event:WHOOPS!}{哎呀！}
+
+% Event BWW
+\customlabel{event:Acupuncture}{針刺}
+\customlabel{event:Burial Mound}{墳塚}
+\customlabel{event:Contract}{契約}
+\customlabel{event:Flytrap}{捕蠅草}
+\customlabel{event:Ghost in The Machine}{鬼入鏡}
+\customlabel{event:Lightning Strikes}{閃電擊}
+\customlabel{event:Misty Arch}{迷霧拱門}
+\customlabel{event:Mutant Housepet}{異變寵物}
+\customlabel{event:The Left Hand}{左手}
+\customlabel{event:The Walls Have Eyes}{牆上有眼}
+\customlabel{event:What Year is It!?}{今夕是何夕}
+
 % Item BHH
 \customlabel{item:Adrenaline Shot}{腎上腺素注射}
 \customlabel{item:Amulet Of The Ages}{遠古護身符}
@@ -194,10 +254,12 @@
 %
 
 % Roll
+\customlabel{roll:}{}
 \customlabel{roll:Combat}{戰鬥}
 \customlabel{roll:Damage}{傷害}
 \customlabel{roll:Event}{事件}
 \customlabel{roll:Haunt}{作祟}
+\customlabel{roll:Task}{??}
 \customlabel{roll:Trait}{屬性}
 
 % Usage
