--- a/include/text.sty
+++ b/include/text.sty
@@ -2,6 +2,10 @@
 \newcommand{\Room}[1]{〈\ref{room:#1}~#1〉}
 \newcommand{\RoomBrief}[1]{\ref{room:#1}}
 
+% Event
+\newcommand{\Event}[1]{〈\ref{event:#1}~#1〉}
+\newcommand{\EventBrief}[1]{\ref{event:#1}}
+
 % Item
 \newcommand{\Item}[1]{〈\ref{item:#1}~#1〉}
 \newcommand{\ItemBrief}[1]{\ref{item:#1}}
@@ -20,13 +24,13 @@
 
 % Token
 \newcommand{\TokenSq}[1]{〈\ref{token-sq:#1}~#1〉方形標記}
-\newcommand{\TokenSqBrief}[1]{〈\ref{token-sq:#1}~#1〉標記}
+\newcommand{\TokenSqBrief}[1]{\ref{token-sq:#1}}
 
 \newcommand{\TokenTri}[1]{〈\ref{token-tri:#1}~#1〉三角標記}
-\newcommand{\TokenTriBrief}[1]{〈\ref{token-tri:#1}~#1〉標記}
+\newcommand{\TokenTriBrief}[1]{\ref{token-tri:#1}}
 
 \newcommand{\TokenPenta}[1]{〈\ref{token-penta:#1}~#1〉五角標記}
-\newcommand{\TokenPentaBrief}[1]{〈\ref{token-penta:#1}~#1〉標記}
+\newcommand{\TokenPentaBrief}[1]{\ref{token-penta:#1}}
 
 % Roll
 \newcommand{\Roll}[1]{\ref{roll:#1}檢定}
