--- a/src/card/bhh/item.tex
+++ b/src/card/bhh/item.tex
@@ -1,5 +1,5 @@
 %!TEX root = ../../../card.tex
-
+%
 \begin{ItemCard}{bhh}{Adrenaline Shot}{}
   \begin{CardStory}
     一管含奇怪螢光液體的針筒。
@@ -21,7 +21,7 @@
   \begin{CardStory}
     你手中飄動著一根完美的羽毛。
   \end{CardStory}
-  當你進行任何\RollAny{}前，可以使用\ThisName{}並指定一個 0-8 的數字，視為擲骰結果。\smallbreak
+  當你進行任何\RollAny{}前，可以使用\ThisName{}並指定一個 0-8 的數字，視為\RollAny{}結果。\smallbreak
   使用後將\ThisName{}丟棄。\smallbreak
 \end{ItemCard}%
 \linebreak[0]%
@@ -237,3 +237,4 @@
   被\ThisName{}治療的探險者，將知識恢復至初始值。\smallbreak
   使用後將\ThisName{}丟棄。\smallbreak
 \end{ItemCard}%
+\linebreak[0]%
