--- a/src/card/bhh/omen.tex
+++ b/src/card/bhh/omen.tex
@@ -1,5 +1,5 @@
 %!TEX root = ../../../card.tex
-
+%
 \begin{OmenCard}{bhh}{Bite}{}
   \begin{CardStory}
     一聲咆哮，瀰漫著死亡的氣息，\\
@@ -37,10 +37,9 @@
     看似友善的癩皮狗⋯\\
     至少你希望牠是⋯
   \end{CardStory}
-  \footnotesize
   立即獲得１級力量和１級神志。\smallbreak
   若你失去\ThisName{}，立即失去１級力量和１級神志。\smallbreak
-  使用一個小怪物標示代表這隻\ThisName{}，將牠放在你的房間裡。（不要和其他怪物搞混。）\smallbreak
+  % 使用一個小怪物標示代表這隻\ThisName{}，將牠放在你的房間裡。（不要和其他怪物搞混。）\smallbreak
   每回合一次，你可差遣\ThisName{}來回於六格內的房間（可以使用門和樓梯），途中牠可以攜帶一件物品去丟下，同時也可以撿拾並帶回一件掉落的物品。\smallbreak
   \ThisName{}不會被對手阻擋。牠不能通過單向的通道、或任何需要\RollAny{}的房間。牠也不能攜帶會減緩移動速度的物品。\smallbreak
   \ThisName{}不可被棄置、交易、或搶奪。\smallbreak
@@ -123,3 +122,4 @@
   此後每回合移動之前，你可以使用\ThisName{}窺視房間牌堆頂端的板塊。\smallbreak
   在作祟發生之後，每當你使用\ThisName{}時，叛徒可遣任意數量的怪物向你移動１格。若你身為叛徒，則忽略此效果。若沒有叛徒，則所有怪物皆須向你前進１格。\smallbreak
 \end{OmenCard}%
+\linebreak[0]%
