--- a/src/card/bhh/event.tex
+++ b/src/card/bhh/event.tex
@@ -1,6 +1,6 @@
 %!TEX root = ../../../card.tex
-
-\begin{EventCard}{bhh}{A Moment of Hope}{希望時刻}
+%
+\begin{EventCard}{bhh}{A Moment of Hope}
   \begin{CardStory}
     房間湧現出不可思議的正面能量，\\
     似乎有什麼正努力對抗著\\
@@ -10,7 +10,7 @@
   此後，任何英雄在此房內進行的\Roll{Trait}，皆多擲１顆骰（至多８顆）。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Angry Being}{惱人的生物}
+\begin{EventCard}{bhh}{Angry Being}
   \begin{CardStory}
     牠從牆上的黏液中冒出。\\
     而且⋯就在你身邊⋯
@@ -23,7 +23,7 @@
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Bloody Vision}{血腥幻象}
+\begin{EventCard}{bhh}{Bloody Vision}
   \begin{CardStory}
     牆壁因血液而潮濕，\\
     鮮血從天花板不停滴下，\\
@@ -38,7 +38,7 @@
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Burning Man}{燃燒之人}
+\begin{EventCard}{bhh}{Burning Man}
   \begin{CardStory}
     全身著火的男子從房間跑過，\\
     濃膩的水泡在皮膚上冒出並破裂，\\
@@ -53,13 +53,13 @@
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Closet Door}{壁櫥}
+\begin{EventCard}{bhh}{Closet Door}
   \begin{CardStory}
     壁櫥的門半掩著，\\
     裡面肯定有什麼東西躲藏著⋯
   \end{CardStory}
   放置一枚\TokenSq{Closet}在此房。\smallbreak
-  每回合一次，任何探險者皆可擲２顆骰子嘗試打開壁櫥：
+  每回合一次，任何探險者皆可擲２顆骰子嘗試打開\TokenSqBrief{Closet}：
   \begin{itemize}
     \item[4] 抽取１張道具卡。
     \item[2-3] 抽取１張事件卡。
@@ -67,7 +67,7 @@
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Creepy Crawlies}{恐怖爬蟲}
+\begin{EventCard}{bhh}{Creepy Crawlies}
   \begin{CardStory}
     成千上萬的爬蟲，\\
     落在你的皮膚上，\\
@@ -81,18 +81,18 @@
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Creepy Puppet}{陰森傀儡}
+\begin{EventCard}{bhh}{Creepy Puppet}
   \begin{CardStory}
     散亂的雜物中，\\
     你發現一個令你毛骨悚然的傀儡。\\
     在你們四目相接時，\\
     他突然拿起小小的矛向你跳去⋯
   \end{CardStory}
-  你的右方的玩家代替傀儡，對你的進行力量４的攻擊。\smallbreak
+  你的右方的玩家代替\ThisName{}，對你的進行力量４的攻擊。\smallbreak
   若你因此受傷，除你以外擁有\Omen{Spear}的玩家，獲得２級力量。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Debris}{瓦礫}
+\begin{EventCard}{bhh}{Debris}
   \begin{CardStory}
     泥灰從天花板及牆上不斷掉落⋯
   \end{CardStory}
@@ -103,11 +103,11 @@
     \item[0] 你被瓦礫活埋！受到２顆骰的物理傷害。
   \end{itemize}
   若被活埋，保留此卡，並無法再進行任何行動或使用物品，直到掙脫為止。\smallbreak
-  此後每回合一次，你皆可進行力量檢定達 4+ 嘗試掙脫。其他探險者也能用此方法幫你掙脫。\smallbreak
+  此後每回合一次，你皆可進行力量檢定達 4+ 嘗試掙脫（若成功，丟棄此卡）。其他探險者也能用此方法幫你掙脫。\smallbreak
   若檢定三次失敗，你自動掙脫並丟棄此卡，從下回合開始正常行動。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Disquieting Sounds}{令人不安的聲響}
+\begin{EventCard}{bhh}{Disquieting Sounds}
   \begin{CardStory}
     嬰兒的哭泣聲殷殷響起，\\
     控訴著被遺棄的命運。\\
@@ -122,7 +122,7 @@
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Drip... Drip... Drip...}{滴…滴…滴…}
+\begin{EventCard}{bhh}{Drip... Drip... Drip...}
   \begin{CardStory}
     一段有節奏的聲音刺激你的腦袋⋯
   \end{CardStory}
@@ -130,12 +130,13 @@
   此後，任何探險者在此房間進行的\Roll{Trait}，皆少擲１顆骰子（至少１顆）。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Footsteps}{腳印}
+\begin{EventCard}{bhh}{Footsteps}
   \begin{CardStory}
     地板沉緩地發出嘎軋的聲響，\\
     塵土向上飛揚，骯髒的地板上\\
     浮現了一步步的腳印。\\
-    而就在它們快碰到你時，卻消失了⋯
+    而就在它們快碰到你時，\\
+    卻消失了⋯
   \end{CardStory}
   請立即擲１顆骰（如果你位於\Room{Crypt}，多擲１顆）：
   \begin{itemize}
@@ -147,7 +148,7 @@
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Funeral}{葬儀}
+\begin{EventCard}{bhh}{Funeral}
   \begin{CardStory}
     你看見一口打開的棺材，\\
     而你正躺在裡面⋯
@@ -161,7 +162,7 @@
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Grave Dirt}{墳土飛揚}
+\begin{EventCard}{bhh}{Grave Dirt}
   \begin{CardStory}
     這房間覆蓋著一層厚厚的墳土，\\
     塵土飄至皮膚，\\
@@ -175,7 +176,7 @@
   若你回合結束時，停留在\Room{Balcony}、\Room{Gardens}、\Room{Graveyard}、\Room{Gymnasium}、\Room{Larder}、\Room{Patio}、\Room{Tower}，或是因道具卡而讓任一屬性升級時，丟棄此卡並回復正常。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Groundskeeper}{園丁}
+\begin{EventCard}{bhh}{Groundskeeper}
   \begin{CardStory}
     你轉身看見一名穿園丁服的男人，\\
     他舉起鏟子，朝你衝來。\\
@@ -185,11 +186,11 @@
   請立即進行知識檢定（如果你位於\Room{Gardens}，少擲２顆）：
   \begin{itemize}
     \item[4+] 你在泥濘中發現了某樣東西。抽取１張道具卡。
-    \item[0-3] 園丁再次出現，並用鏟子用力揮向你的臉！你的右方的玩家代替園丁，對你的進行力量４的攻擊。
+    \item[0-3] \ThisName{}再次出現，並用鏟子用力揮向你的臉！你的右方的玩家代替\ThisName{}，對你的進行力量４的攻擊。
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Hanged Men}{上吊之人}
+\begin{EventCard}{bhh}{Hanged Men}
   \begin{CardStory}
     一陣寒風吹過房間，三名男人\\
     被破爛麻繩吊掛在天花板上。\\
@@ -206,7 +207,7 @@
   若所有屬性皆通過檢定，獲得１級任意屬性。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Hideous Shriek}{駭人驚叫}
+\begin{EventCard}{bhh}{Hideous Shriek}
   \begin{CardStory}
     一開始聽起來像耳語，\\
     但最後卻變成了撕裂靈魂的驚叫⋯
@@ -219,7 +220,7 @@
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Image in the Mirror}{鏡中影像}
+\begin{EventCard}{bhh}{Image in the Mirror}
   \begin{CardStory}
     這房間中，有一面古老的鏡子，\\
     你疑惑地看著鏡中自己的倒影，\\
@@ -234,7 +235,7 @@
   選擇１張你所擁有的道具卡，洗入道具牌庫中。獲得１級知識。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{\scalebox{-1}[1]{Image in the Mirror}}{\scalebox{-1}[1]{鏡中影像}}
+\begin{EventCardSp}{bhh}{\scalebox{-1}[1]{Image in the Mirror}}{\scalebox{-1}[1]{鏡中影像}}
   \begin{CardStory}
     這房間中，有一面古老的鏡子，\\
     你驚恐地看著鏡中自己的倒影，\\
@@ -246,9 +247,9 @@
     並透過鏡子遞給你一件物品⋯
 \end{CardStory}
   抽取１張道具卡。\smallbreak
-\end{EventCard}%
+\end{EventCardSp}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{It is Meant to Be}{命中註定}
+\begin{EventCard}{bhh}{It is Meant to Be}
   \begin{CardStory}
     你跌坐在地上，\\
     未來的影像閃過你的腦海⋯
@@ -256,22 +257,22 @@
   請選擇一項事件發生：
   \begin{itemize}
     \item[•] 窺視道具、事件、或預兆牌庫的前三張牌，依任意順序放回去，但不得說出看到的內容。
-    \item[•] 擲４顆骰子並記錄結果。在未來任何擲骰機會，可直接使用這個結果，但不得超過該擲骰機會的最大可能值（僅限一次）。
+    \item[•] 擲４顆骰子並記錄結果。在未來任何\RollAny{}，可直接使用這個結果，但不得超過該\RollAny{}的最大可能值（僅限一次）。
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Jonah’s Turn}{約拿的回合}
+\begin{EventCard}{bhh}{Jonah’s Turn}
   \begin{CardStory}
     兩個小男孩在玩陀螺。\\
     男孩：「約拿，你也想玩呀？」\\
     約拿：「不，這只有我可以玩！」\\
     語畢，約拿抓起陀螺，猛力砸向男孩的臉。影像逐漸模糊，依然可看見小男孩倒在血泊中，而約拿卻不停地砸向男孩的臉⋯
 \end{CardStory}
-  持有\Item{Puzzle Box}的探險者，必須立即將它丟棄，提供約拿玩具玩，並抽取１張道具卡。\smallbreak
+  持有\Item{Puzzle Box}的探險者，必須立即將它丟棄（送給約拿玩），並抽取１張道具卡。\smallbreak
   若此事發生，你獲得１級神志，否則你失去１級神志。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Lights Out}{燈熄了}
+\begin{EventCard}{bhh}{Lights Out}
   \begin{CardStory}
     你的手電筒忽然熄滅。\\
     別擔心，總會有人帶著電池的⋯
@@ -281,22 +282,22 @@
   若你持有\Item{Candle}，或在\Room{Furnace Room}結束回合，亦可棄掉卡片。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Locked Safe}{上鎖的保險箱}
+\begin{EventCard}{bhh}{Locked Safe}
   \begin{CardStory}
     在肖像畫後方的牆上，\\
     你發現了一個隱藏的保險箱。\\
     當然，它肯定有某種陷阱⋯
   \end{CardStory}
   放置一枚\TokenSq{Safe}在此房。\smallbreak
-  每回合一次，任何探險者皆可進行知識檢定嘗試打開保險箱：
+  每回合一次，任何探險者皆可進行知識檢定嘗試打開\TokenSqBrief{Safe}：
   \begin{itemize}
-    \item[5+] 你成功打開了保險箱，抽２張道具卡，並移除標記。
+    \item[5+] 你成功打開了\TokenSqBrief{Safe}，抽２張道具卡，並移除標記。
     \item[2-4] 受到１顆骰的物理傷害。
     \item[0-1] 受到２顆骰的物理傷害。
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Mists From the Walls}{壁上霧靄}
+\begin{EventCard}{bhh}{Mists From the Walls}
   \begin{CardStory}
     霧氣從牆上湧現，\\
     煙霧之中浮現了滿滿的人臉⋯\\
@@ -310,22 +311,22 @@
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Mystic Slide}{神秘滑道}
+\begin{EventCard}{bhh}{Mystic Slide}
   \begin{CardStory}
     你腳下的地板，忽然滑落並鬆開⋯
   \end{CardStory}
   \footnotesize
   若你位於地下，則由下一位不在地下玩家觸發此效果。\smallbreak
   放置一枚\TokenSq{Slide}在此房。\smallbreak
-  請立即進行力量檢定嘗試控制滑道：
+  請立即進行力量檢定嘗試控制\TokenSqBrief{Slide}：
   \begin{itemize}
-    \item[5+] 你成功控制住滑道。移至任意較低樓層的任意一間房間中。
+    \item[5+] 你成功控制住\TokenSqBrief{Slide}。移至任意較低樓層的任意一間房間中。
     \item[0-4] 你失控了！抽取一張地下的房間板塊（若已無未探索的地下房間，則任選一間），跌落至該處，並受到１顆骰的物理傷害。若這你不是的回合，則無須為新房間抽取事件／道具／預兆卡。
   \end{itemize}
-  此後，任何探險者皆可透過檢定嘗試使用滑道，而不須花費行動步數。\smallbreak
+  此後，任何探險者皆可透過檢定嘗試使用\TokenSqBrief{Slide}，而不須花費行動步數。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Night View}{暗夜景象}
+\begin{EventCard}{bhh}{Night View}
   \begin{CardStory}
     一對幽魂情侶掠過你的面前，\\
     身穿結婚禮服無聲地漫步著⋯
@@ -337,7 +338,7 @@
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Phone Call}{鈴鈴鈴⋯}
+\begin{EventCard}{bhh}{Phone Call}
   \begin{CardStory}
     房內的電話忽然響起，\\
     你不自覺地接起這通電話⋯
@@ -355,7 +356,7 @@
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Possession}{著魔}
+\begin{EventCard}{bhh}{Possession}
   \begin{CardStory}
     牆上分裂出數道黑影，\\
     你一時受到震驚而無法動作。\\
@@ -369,19 +370,19 @@
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Revolving Wall}{旋轉牆}
+\begin{EventCard}{bhh}{Revolving Wall}
   \begin{CardStory}
     牆面旋轉至另一個地方⋯
   \end{CardStory}
   選定該房一面沒有門的牆壁，放置一枚\TokenSq{Wall Switch}在該牆壁上，並立即前往牆後的房間（若牆後無房間則為它抽１間）。\smallbreak
-  開關雙面可用，此後每回合一次，任何探險者皆可進行知識檢定嘗試尋找旋轉牆的機關：
+  開關雙面可用，此後每回合一次，任何探險者皆可進行知識檢定嘗試尋找\ThisName{}的機關：
   \begin{itemize}
-    \item[3+] 你發現了旋轉牆的機關。移動至牆後房間，而不須花費行動步數。
+    \item[3+] 你發現了\ThisName{}的機關。移動至牆後房間，而不須花費行動步數。
     \item[0-2] 你沒有辦法理解機關的奧妙。
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Rotten}{腐敗}
+\begin{EventCard}{bhh}{Rotten}
   \begin{CardStory}
     這房間的味道簡直糟透了！\\
     聞起來像死亡，\\
@@ -396,7 +397,7 @@
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Secret Passage}{秘密通道}
+\begin{EventCard}{bhh}{Secret Passage}
   \begin{CardStory}
     牆壁的一部分滑了開來，\\
     一道發霉的通道正在等著你⋯
@@ -409,21 +410,21 @@
     \item[2-3] 任意一間地面房間中。
     \item[0-1] 任意一間地下房間中。
   \end{itemize}
-  你現在就可以使用祕密通道，就算你已耗盡行動步數亦可。\smallbreak
-  此後，任何探險者皆可以使用通道，並花費１點行動步數。\smallbreak
+  你現在就可以使用\TokenSqBrief{Secret Passage}，就算你已耗盡行動步數亦可。\smallbreak
+  此後，任何探險者皆可以使用\TokenSqBrief{Secret Passage}，並花費１點行動步數。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Secret Stairs}{秘密階梯}
+\begin{EventCard}{bhh}{Secret Stairs}
   \begin{CardStory}
     一道毛骨悚然的聲響環繞著你，\\
     你發現了一個秘密階梯⋯
   \end{CardStory}
   放置一枚\TokenSq{Secret Stairs}在此房，並放置另一枚標記於另一樓層的任意一間房間中。\smallbreak
-  你現在就可以使用祕密階梯，就算你已耗盡行動步數亦可。若你選擇現在使用階梯，到達新房間時，必須再抽取１張事件卡。\smallbreak
-  此後，任何探險者皆可以使用通道，並花費１點行動步數。\smallbreak
+  你現在就可以使用\TokenSqBrief{Secret Stairs}，就算你已耗盡行動步數亦可。若你選擇現在使用階梯，到達新房間時，必須再抽取１張事件卡。\smallbreak
+  此後，任何探險者皆可以使用\TokenSqBrief{Secret Stairs}，並花費１點行動步數。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Shrieking Wind}{尖聲狂風}
+\begin{EventCard}{bhh}{Shrieking Wind}
   \begin{CardStory}
     風勢持續地增強，\\
     緩慢地漸強成刺耳的咆嘯聲⋯
@@ -437,7 +438,7 @@
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Silence}{寂靜}
+\begin{EventCard}{bhh}{Silence}
   \begin{CardStory}
     在地底下，任何事物都變得沈默，\\
     彷彿連呼吸聲都消失了⋯
@@ -450,20 +451,20 @@
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Skeletons}{骨骸}
+\begin{EventCard}{bhh}{Skeletons}
   \begin{CardStory}
     即使成了骨骸，\\
     母親與孩子仍然緊緊擁抱著⋯
   \end{CardStory}
   放置一枚\TokenSq{Skeletons}在此房。\smallbreak
-  每回合一次，任何探險者皆可進行神志檢定嘗試挖掘骨骸：
+  每回合一次，任何探險者皆可進行神志檢定嘗試挖掘\TokenSqBrief{Skeletons}：
   \begin{itemize}
     \item[5+] 抽取一張道具卡，並移除標記。
     \item[0-4] 你在附近挖掘，卻一無所獲。受到１顆骰的精神傷害。
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Smoke}{煙霧}
+\begin{EventCard}{bhh}{Smoke}
   \begin{CardStory}
     煙霧在你四周翻騰，\\
     你一邊咳嗽、一邊擦著眼淚⋯
@@ -473,7 +474,7 @@
   此後，任何探險者在此房間進行的\Roll{Trait}，皆少擲２顆骰子（至少１顆）。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Something Hidden}{隱藏著什麼⋯}
+\begin{EventCard}{bhh}{Something Hidden}
   \begin{CardStory}
     這房間似乎有些古怪，\\
     但到底會是什麼呢？\\
@@ -486,7 +487,7 @@
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Something Slimy}{黏滑之物}
+\begin{EventCard}{bhh}{Something Slimy}
   \begin{CardStory}
     在你腳踝上的是什麼東西？\\
     是一隻蟲？是誰的觸角？\\
@@ -500,7 +501,7 @@
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Spider}{蜘蛛}
+\begin{EventCard}{bhh}{Spider}
   \begin{CardStory}
     拳頭般大小的蜘蛛，\\
     突然落在你的肩膀上，\\
@@ -514,7 +515,7 @@
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{The Beckoning}{呼喚}
+\begin{EventCard}{bhh}{The Beckoning}
   \begin{CardStory}
     離開！我必須離開！飛向自由吧！
   \end{CardStory}
@@ -525,7 +526,7 @@
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{The Lost One}{迷失之魂}
+\begin{EventCard}{bhh}{The Lost One}
   \begin{CardStory}
     一名身穿美國內戰晚禮服的女子，\\
     正揮手招喚著你，\\
@@ -546,7 +547,7 @@
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{The Voice}{人聲}
+\begin{EventCard}{bhh}{The Voice}
   \begin{CardStory}
     「我在地底下，被埋在地底下⋯」\\
     微弱的聲音只說出這樣一句，\\
@@ -559,7 +560,7 @@
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{The Walls}{牆}
+\begin{EventCard}{bhh}{The Walls}
   \begin{CardStory}
     在這間溫暖的房間中，\\
     活生生的牆壁有如心跳得正動，\\
@@ -568,7 +569,7 @@
   請立即抽取一張新的房間板塊，並移到此處。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Webs}{蜘蛛網}
+\begin{EventCard}{bhh}{Webs}
   \begin{CardStory}
     一如往常，你伸手把蜘蛛網撥開，\\
     但這次沒能成功，你被黏住了⋯
@@ -579,11 +580,11 @@
     \item[0-3] 你被黏住了。
   \end{itemize}
   若被黏住，保留此卡，並無法再進行任何行動或使用物品，直到掙脫為止。\smallbreak
-  此後每回合一次，你皆可進行力量檢定達 4+ 嘗試掙脫。其他探險者也能用此方法幫你掙脫。檢定失敗的探險者，回合立即結束。\smallbreak
+  此後每回合一次，你皆可進行力量檢定達 4+ 嘗試掙脫（若成功，丟棄此卡）。其他探險者也能用此方法幫你掙脫。檢定失敗的探險者，回合立即結束。\smallbreak
   若檢定三次失敗，你自動掙脫並丟棄此卡，從下回合開始正常行動。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{What the...?}{咦？}
+\begin{EventCard}{bhh}{What the...?}
   \begin{CardStory}
     當你回頭轉向經過的房間時，\\
     卻什麼也沒看到，\\
@@ -592,7 +593,7 @@
  請將你身處的房間板塊移至同一樓層中，任一尚未探索的門後，房間上的所有標記皆一起移動。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{WHOOPS!}{哎呀！}
+\begin{EventCard}{bhh}{WHOOPS!}
   \begin{CardStory}
     你發現腳下似乎有什麼東西，\\
     正要躲開時，卻被牠狠狠擊倒，\\
@@ -600,3 +601,4 @@
   \end{CardStory}
  請將你所有的道具卡（不包含預兆卡）覆蓋於桌面，由你右邊的玩家隨機選擇丟棄其中一張。\smallbreak
 \end{EventCard}%
+\linebreak[0]%
