Fix size issue.

--- a/src/card/bhh/event.tex
+++ b/src/card/bhh/event.tex
@@ -96,6 +96,7 @@
   \begin{CardStory}
     泥灰從天花板及牆上不斷掉落⋯
   \end{CardStory}
+  \footnotesize
   請立即進行速度檢定：
   \begin{itemize}
     \item[3+] 你閃過了泥灰！獲得１級速度。
