Update rule of special room.

--- a/card.tex
+++ b/card.tex
@@ -2,8 +2,6 @@
 
 \documentclass[10pt, a4paper]{article}
 
-% \usepackage[linktocpage=true, colorlinks=true, linkcolor=blue]{hyperref}
-% \usepackage[nameinlink]{cleveref}
 \usepackage{fullpage}
 \usepackage{enumitem}
 
@@ -15,7 +13,9 @@
 \setlength{\lineskip}{0pt}
 \setlist{leftmargin=2em,font=\bfseries}
 
-\title{BHH - Card}
+\title{Betrayal at House on the Hill}
+\author{Card}
+\date{}
 
 \begin{document}
 
