--- a/data/label.sty
+++ b/data/label.sty
@@ -222,10 +222,12 @@
 %
 
 % Token Square
+\customlabel{token-sq:Below Collapsed Room}{崩塌房間下方}
 \customlabel{token-sq:Blessing}{祝福}
 \customlabel{token-sq:Burial Mound}{墳塚}
 \customlabel{token-sq:Closet}{壁櫥}
 \customlabel{token-sq:Drip}{水滴聲}
+\customlabel{token-sq:Vault Empty}{金庫為空}
 \customlabel{token-sq:Fountain}{噴泉}
 \customlabel{token-sq:Plant}{植物}
 \customlabel{token-sq:Safe}{保險箱}
